Refactor file heirarchy

--- a/src/components/page-header/PageHeader.css
+++ b/src/components/page-header/PageHeader.css
@@ -12,7 +12,7 @@
 }
 
 body {
-  background-image: url(./trinitybackgroundwhite.png);
+  background-image: url(../../assets/img/trinityBackgroundWhite.png);
   margin: 0;
 }
 
