--- a/src/common/styles/header.css
+++ b/src/common/styles/header.css
@@ -46,7 +46,7 @@ nav {
 /*Gets rid of dots*/
 nav ul {
   list-style: none;
-  height: 100%;
+  height: 105%;
 }
 
 /*Displays List side by side*/
@@ -69,22 +69,15 @@ nav ul li a {
   text-decoration: none;
 }
 
-@media all and (max-width: 544px) {
-  header {
-    height: 5.5rem;
-  }
-
-  header nav {
-    height: 55px;
-    padding: 49px 0px 0px;
-  }
-
-  nav ul {
-    margin: 0px;
-  }
+.btnActive{
+  color: black;
 }
 
-@media all and (max-width: 493px) {
+.liActive{
+  background-color: var(--base-color-dark);
+}
+
+@media all and (max-width: 577px) {
   header {
     height: 6.4rem;
     text-align: center;
