--- a/src/common/styles/header.css
+++ b/src/common/styles/header.css
@@ -8,7 +8,7 @@ header {
   color: #fff;
   line-height: 3rem;
   height: 2.5rem;
-
+  z-index: 1;
   box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.2);
 }
 
@@ -77,6 +77,10 @@ nav ul li a {
   background-color: var(--base-color-dark);
 }
 
+.liActive:hover{
+  height: 100%;
+}
+
 @media all and (max-width: 577px) {
   header {
     height: 6.4rem;
@@ -87,7 +91,7 @@ nav ul li a {
     float: none;
     display: block;
     padding: 0px 0px 0px;
-    margin-top: -3rem;
+    margin-top: -3.1rem;
   }
   header img {
     height: 7rem;
