--- a/src/components/result-card/ResultCard.css
+++ b/src/components/result-card/ResultCard.css
@@ -1,4 +1,4 @@
-#searchResults {
+#resultCards {
   margin: 2rem 0rem;
   padding: 1rem;
   display: grid;
@@ -11,7 +11,7 @@
 .resultCard {
   width: 15rem;
   height: 15rem;
-  box-shadow: 2px 2px grey;
+  box-shadow: 5px 5px rgba(0, 0, 0, 0.12);
   background-color: var(--mint);
 }
 
