--- a/src/common/styles/splash.css
+++ b/src/common/styles/splash.css
@@ -36,6 +36,19 @@
   height: 100%;
 }
 
+.splashOverlay {
+  display: inline-block;
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0);
+  margin-bottom: 4rem;
+  overflow: hidden;
+  z-index: 0;
+  padding-top: 50vh;
+  font-size: 5rem;
+}
+
 @media all and (max-width: 596px) {
   .slideshow {
     height: 16rem;
@@ -46,5 +59,11 @@
     margin-bottom: 3rem;
     margin-top: 7rem;
     font-size: 5.5rem;
+  }
+  .splashOverlay {
+    margin-bottom: 4rem;
+    margin-left: -0.7rem;
+    padding-top: 25%;
+    font-size: 3rem;
   }
 }
