--- a/src/components/result-card/ResultCard.css
+++ b/src/components/result-card/ResultCard.css
@@ -2,21 +2,21 @@
   margin: 2rem 0rem;
   padding: 1rem;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
   align-items: center;
   justify-items: center;
   grid-gap: 2rem;
 }
 
 .resultCard {
-  width: 15rem;
-  height: 15rem;
+  width: 20rem;
+  height: 20rem;
   box-shadow: 5px 5px var(--shadow);
   background-color: var(--mint);
 }
 
 .resultCardImageContainer {
-  height: 10rem;
+  height: 11rem;
   overflow: hidden;
 }
 
@@ -24,11 +24,21 @@
   width: 100%;
 }
 
+.resultCardAura {
+  color: var(--off-white);
+  font-size: 1.2rem;
+  padding: 1rem 1rem;
+}
+
 .resultCardTitle {
-  padding: 1rem 1rem 1rem 1rem;
+  color: var(--off-white);
+  padding: 1.2rem 1rem;
+  font-size: 1.2rem;
   text-transform: uppercase;
 }
 
 .resultCardSubtitle {
-  padding: 0rem 1rem 1rem 1rem;
+  color: var(--off-white);
+  font-size: 1rem;
+  padding: 0rem 1rem;
 }
