--- a/src/common/styles/general.css
+++ b/src/common/styles/general.css
@@ -32,7 +32,8 @@ p {
 
 h2 {
   margin: 0;
-  height: 1rem; /* 4 times the height of our base font */
+  height: 1rem;
+  /* 4 times the height of our base font */
   /* background-color: #222; */
   padding: 1rem;
   color: #fff;
@@ -40,11 +41,9 @@ h2 {
   display: block;
   text-align: center;
   box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.2);
-  background: radial-gradient(
-    circle,
+  background: radial-gradient(circle,
     rgba(39, 39, 39, 0.85),
-    rgba(0, 0, 0, 0.27) 70%
-  );
+    rgba(0, 0, 0, 0.27) 70%);
 }
 
 section img ul h3 {
@@ -69,7 +68,8 @@ h6 {
 
 footer {
   padding: 1rem;
-  padding-top: 2rem; /*4 times the height of our base font*/
+  padding-top: 2rem;
+  /*4 times the height of our base font*/
   background-color: #272727;
   color: #fff;
   line-height: 3rem;
@@ -110,6 +110,7 @@ footer img {
   section.landing p {
     font-size: 0.5em;
   }
+
   p {
     max-width: 600px;
     margin: auto;
