--- a/src/components/search-form/SearchForm.css
+++ b/src/components/search-form/SearchForm.css
@@ -5,8 +5,8 @@ article {
   flex-direction: column;
   text-align: center;
 
-  margin-left: 15%;
-  margin-right: 15%;
+  /* margin-left: 15%;
+  margin-right: 15%; */
 }
 
 .formHeader {
@@ -15,13 +15,12 @@ article {
   background-color: rgba(65, 150, 124, 0.85);
   padding: 2%;
   border-radius: 25px;
-  border: solid black 2px;
+  border: solid black 1px;
 }
 
 select {
   height: 100px;
   width: 50%;
-  border-radius: 25px;
   border: solid black 2px;
   text-align: center;
 }
