--- a/src/common/styles/aura_inputs.css
+++ b/src/common/styles/aura_inputs.css
@@ -172,7 +172,7 @@ option {
     font-size: 1.1rem;
     border: 0;
     padding: 0 0.3em 0 0;
-    background: #FF1979;
+    background: var(--base-color);
     color: white;
     font-weight: 600;
     transition: background 0.25s ease-in-out;
@@ -184,7 +184,7 @@ option {
 .grid-100:focus,
 .grid-100:active {
     outline: 0;
-    background: #FFC519;
+    background: var(--base-color-dark);
     color: #232323;
 }
 
