--- a/src/css/splash.css
+++ b/src/css/splash.css
@@ -23,7 +23,7 @@
 .slideshow {
   position: relative;
   width: 100%;
-  height: 27rem;
+  height: 87vh;
   /* background-color: white; */
   margin-bottom: 4rem;
   overflow: hidden;
@@ -47,7 +47,6 @@
   padding-top: 20%;
   font-size: 4.5rem;
 }
-
 
 @media all and (max-width: 748px) {
   .slideshow {
