--- a/src/css/aura_inputs.css
+++ b/src/css/aura_inputs.css
@@ -1,7 +1,3 @@
-article {
-    height: 100%;
-}
-
 ::selection {
     color: #fff;
     background: #E10DB1;
@@ -27,13 +23,17 @@ article::before {
     background: rgba(105, 102, 102, 0.6);
 }
 
+/* .inp-wrap {
+    display: inline-block;
+} */
+
 .search-form {
     position: absolute;
     top: 50%;
-    left: 50%;
+    left: 61%;
     transform: translate(-50%, -50%);
     width: 100%;
-    display: flex;
+    /* display: inline; */
 }
 
 form {
@@ -42,10 +42,6 @@ form {
     max-width: 100rem;
     margin: auto;
     display: flex;
-}
-
-.inp-wrap {
-    display: inline-block;
 }
 
 
@@ -57,63 +53,31 @@ form {
     font-size: 1.4rem;
 }
 
-/* .search-wrap {
-    width: 50%;
-} */
-
 .cat-wrap {
-    display: inline-flex;
-}
-
-.submit-wrap {
-    width: 15%;
-}
-
-.grid-20 {
-    width: 20%;
-}
-
-.grid-25 {
-    width: 25%;
-}
-
-.grid-75 {
-    width: 75%;
+    display: inline-block;
 }
 
 .grid-80 {
-    width: 100%;
+    width: 9rem;
 }
 
+/* button width */
 .grid-100 {
-    width: 100%;
+    width: 8rem;
 }
 
+/* input and span styles*/
 
-/* input and label styles*/
-
-label {
+.search-form span {
     padding: 0 1rem;
     display: inline-block;
     vertical-align: middle;
     line-height: 3.125rem;
     background: #2F2F2F;
-    cursor: pointer;
     text-align: center;
     font-weight: 300;
     color: #fff;
     /* transition: color 0.2s ease-in-out, background 0.2s ease-in-out; */
-}
-
-/* label:hover {
-    background: #E1E1E1;
-    color: #232323;
-} */
-
-.search-label {
-    width: 25%;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
 }
 
 input,
@@ -130,7 +94,6 @@ select:focus {
     box-shadow: inset 0 0 0 5px #FFC519;
 }
 
-
 /* select menu styles */
 
 .cat-wrap {
@@ -139,7 +102,6 @@ select:focus {
     z-index: 1;
     margin: 0;
 }
-
 
 /* triangle */
 
@@ -164,7 +126,6 @@ select {
 option {
     margin: 0.6em 0;
 }
-
 
 /* search button and icon styles */
 
@@ -193,7 +154,6 @@ option {
 }
 
 #submitButtonContainer {
-
     margin: 0;
     padding: 0;
 }
@@ -214,44 +174,19 @@ option {
     fill: #fff;
 }
 
-/* .btn:hover #search-icon,
-.btn:focus #search-icon {
-    fill: #232323;
-} */
-
 @media screen and (max-width: 820px) {
-    .search-label {
+    .search-span {
         border-radius: 0;
     }
 
     .submit-wrap {
-        width: 50%;
-        display: block;
+        display: wrap;
         margin: 1rem auto 1rem;
-    }
-
-    .btn {
-        border-radius: 5px;
     }
 
     .search-form {
         padding: 0 1rem;
-    }
-}
-
-@media screen and (max-width: 560px) {
-
-    .cat-wrap,
-    .search-wrap {
-        width: 100%;
-        margin-bottom: 0.5rem;
-    }
-
-    .grid-80 {
-        width: 75%;
-    }
-
-    .grid-20 {
-        width: 25%;
+        display: wrap;
+        font-size: 1rem;
     }
 }
