--- a/src/css/general.css
+++ b/src/css/general.css
@@ -10,13 +10,12 @@
 
 body {
   background-image: url(../assets/img/trinityBackgroundWhite.png);
-  margin: 0;
 }
 
 html,
 body {
   margin: 0;
-  /*width: 100%;
+  /*
     height: 100%;
     box-sizing: border-box;*/
 }
@@ -41,11 +40,9 @@ h2 {
   display: block;
   text-align: center;
   box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.2);
-  background: radial-gradient(
-    circle,
+  background: radial-gradient(circle,
     rgba(39, 39, 39, 0.85),
-    rgba(0, 0, 0, 0.27) 70%
-  );
+    rgba(0, 0, 0, 0.27) 70%);
 }
 
 section img ul h3 {
