--- a/src/css/aura_inputs.css
+++ b/src/css/aura_inputs.css
@@ -30,10 +30,8 @@ article::before {
 .search-form {
     position: absolute;
     top: 50%;
-    left: 61%;
+    left: 48%;
     transform: translate(-50%, -50%);
-    width: 100%;
-    /* display: inline; */
 }
 
 form {
@@ -63,7 +61,7 @@ form {
 
 /* button width */
 .grid-100 {
-    width: 8rem;
+    width: 6rem;
 }
 
 /* input and span styles*/
@@ -132,7 +130,6 @@ option {
 .grid-100 {
     font-size: 1.1rem;
     border: 0;
-    padding: 0 0.3em 0 0;
     background: var(--base-color);
     color: white;
     font-weight: 600;
@@ -162,31 +159,10 @@ option {
     transform: translateY(1px);
 }
 
-.search-icon-container {
-    outline: 0;
-}
-
-#search-icon {
-    height: 2rem;
-    width: 2rem;
-    vertical-align: middle;
-    outline: 0;
-    fill: #fff;
-}
-
-@media screen and (max-width: 820px) {
-    .search-span {
-        border-radius: 0;
-    }
-
-    .submit-wrap {
-        display: wrap;
-        margin: 1rem auto 1rem;
-    }
-
-    .search-form {
-        padding: 0 1rem;
-        display: wrap;
-        font-size: 1rem;
+@media screen and (max-width: 970px) {
+    form {
+        display: flex;
+        flex-wrap: wrap;
+        text-align: center;
     }
 }
