--- a/src/css/aura_inputs.css
+++ b/src/css/aura_inputs.css
@@ -42,17 +42,12 @@ form {
     display: flex;
 }
 
-
 /* very messy "grid" styles */
 
 [class*="grid-"] {
     vertical-align: middle;
     height: 3.125rem;
     font-size: 1.4rem;
-}
-
-.cat-wrap {
-    display: inline-block;
 }
 
 .grid-80 {
@@ -68,7 +63,7 @@ form {
 
 .search-form span {
     padding: 0 1rem;
-    display: inline-block;
+    /* display: flex; */
     vertical-align: middle;
     line-height: 3.125rem;
     background: #2F2F2F;
@@ -114,9 +109,7 @@ select:focus {
 }
 
 select {
-    padding: 0.5rem 2rem 0.5rem 0.75rem;
-    -webkit-appearance: none;
-    -moz-appearance: none;
+    padding: 0.5rem 1.5rem 0.5rem 0.75rem;
     appearance: none;
     border-radius: 0;
 }
@@ -138,15 +131,10 @@ option {
     border-bottom-right-radius: 5px;
 }
 
-.grid-100:hover {
-    outline: 0;
-    background: var(--base-color-dark);
-    color: #232323;
-}
-
+.grid-100:hover,
 .grid-100:active {
     outline: 0;
-    background: var(--base-color);
+    background: var(--base-color-dark);
     color: #232323;
 }
 
@@ -159,10 +147,49 @@ option {
     transform: translateY(1px);
 }
 
+
 @media screen and (max-width: 970px) {
     form {
         display: flex;
+
         flex-wrap: wrap;
+
         text-align: center;
+    }
+
+    .grid-100 {
+        width: 29.3vw;
+        min-width: 9rem;
+        border-radius: 5px;
+
+        /* break-before */
+    }
+
+    [class*="grid-"] {
+        /* vertical-align: middle; */
+        height: 3.125rem;
+        font-size: 1.1rem;
+    }
+
+    #want {
+        width: 25.5vw;
+    }
+
+    .cat-wrap select {
+        width: 29.2vw;
+        min-width: 9rem;
+
+    }
+
+    .search-form span {
+        width: 25.5vw;
+        min-width: 7rem;
+    }
+
+    .search-form {
+        position: center;
+        top: 50%;
+        left: 55%;
+        transform: translate(-50%, -50%);
     }
 }
