--- a/src/css/ResultCard.css
+++ b/src/css/ResultCard.css
@@ -2,7 +2,7 @@
   margin: 2rem 0rem;
   padding: 1rem;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
+  grid-template-columns: repeat(3, minmax(20rem, 1fr));
   align-items: center;
   justify-items: center;
   grid-gap: 2rem;
@@ -49,5 +49,6 @@
 }
 
 .expander {
-  display: none;
+  border: 2px solid black;
+  grid-column: auto / span 3;
 }
