--- a/src/css/splash.css
+++ b/src/css/splash.css
@@ -25,7 +25,7 @@
   width: 100%;
   height: 87vh;
   /* background-color: white; */
-  margin-bottom: 4rem;
+  /* margin-bottom: 4rem; */
   overflow: hidden;
 }
 
@@ -46,6 +46,26 @@
   z-index: 0;
   padding-top: 20%;
   font-size: 4.5rem;
+  text-shadow: 2px 2px 4px #000000c7;
+}
+
+.splashOverlayAura {
+  display: flex;
+  position: absolute;
+  width: 97%;
+  background: transparent;
+  overflow: hidden;
+  font-size: 2.5rem;
+  box-shadow: 0px 0px 0px 0px;
+  height: 80vh;
+  align-items: flex-end;
+  justify-content: flex-end;
+  text-shadow: 2px 2px 4px #000000c7;
+}
+
+.minty {
+  padding: 0px 0px 0px 0px;
+  margin: 0px 0px;
 }
 
 @media all and (max-width: 748px) {
