search background color

--- a/src/css/aura_inputs.css
+++ b/src/css/aura_inputs.css
@@ -23,10 +23,6 @@ article::before {
     background: rgba(105, 102, 102, 0.6);
 }
 
-/* .inp-wrap {
-    display: inline-block;
-} */
-
 .search-form {
     position: absolute;
     top: 50%;
@@ -51,7 +47,7 @@ form {
 }
 
 .grid-80 {
-    width: 9rem;
+    width: 8rem;
 }
 
 /* button width */
@@ -63,14 +59,12 @@ form {
 
 .search-form span {
     padding: 0 1rem;
-    /* display: flex; */
     vertical-align: middle;
     line-height: 3.125rem;
     background: #2F2F2F;
     text-align: center;
     font-weight: 300;
     color: #fff;
-    /* transition: color 0.2s ease-in-out, background 0.2s ease-in-out; */
 }
 
 input,
@@ -109,6 +103,7 @@ select:focus {
 }
 
 select {
+    background-color: white;
     padding: 0.5rem 1.5rem 0.5rem 0.75rem;
     appearance: none;
     border-radius: 0;
@@ -151,9 +146,7 @@ option {
 @media screen and (max-width: 970px) {
     form {
         display: flex;
-
         flex-wrap: wrap;
-
         text-align: center;
     }
 
@@ -162,11 +155,9 @@ option {
         min-width: 9rem;
         border-radius: 5px;
 
-        /* break-before */
     }
 
     [class*="grid-"] {
-        /* vertical-align: middle; */
         height: 3.125rem;
         font-size: 1.1rem;
     }
@@ -189,7 +180,14 @@ option {
     .search-form {
         position: center;
         top: 50%;
+        left: 57%;
+    }
+}
+
+@media screen and (max-width: 550px) {
+    .search-form {
+        position: center;
+        top: 50%;
         left: 55%;
-        transform: translate(-50%, -50%);
     }
 }
