--- a/src/css/splash.css
+++ b/src/css/splash.css
@@ -70,7 +70,7 @@
   top: -5rem;
 }
 
-@media all and (max-width: 748px) {
+@media all and (max-width: 808px) {
   .slideshow {
     height: 21.5rem;
     margin-bottom: 3px;
@@ -86,12 +86,16 @@
   .splashOverlay {
     margin-bottom: 4rem;
     margin-left: -0.7rem;
-    padding-top: 25%;
+    padding-top: 22%;
     font-size: 3.5rem;
+  }
+  .splashOverlayAura {
+    height: 65vh;
+    font-size: 2rem;
   }
 }
 
-@media all and (max-width: 596px) {
+@media all and (max-width: 635px) {
   .slideshow {
     height: 16rem;
     margin-bottom: 3px;
@@ -107,12 +111,15 @@
   .splashOverlay {
     margin-bottom: 4rem;
     margin-left: -0.7rem;
-    padding-top: 25%;
+    padding-top: 20%;
     font-size: 3rem;
+  }
+  .splashOverlayAura {
+    height: 46vh;
   }
 }
 
-@media all and (max-width: 450px) {
+@media all and (max-width: 545px) {
   .slideshow {
     height: 13.9rem;
     margin-bottom: 3px;
@@ -128,7 +135,11 @@
   .splashOverlay {
     margin-bottom: 4rem;
     margin-left: -0.7rem;
-    padding-top: 30%;
+    padding-top: 20%;
     font-size: 2rem;
+  }
+  .splashOverlayAura {
+    height: 39vh;
+    font-size: 1.5rem;
   }
 }
