--- a/src/css/Modal.css
+++ b/src/css/Modal.css
@@ -5,11 +5,11 @@
   margin: 0px auto 0;
   transition: all 0.8s;
 
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  width: 100%; /* Full width */
-  height: 70%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+  height: 70%;
+  overflow: auto;
 
   display: flex;
   flex-direction: column;
@@ -52,27 +52,6 @@
 
 .close-modal-btn:hover {
   color: black;
-}
-
-.btn-cancel,
-.btn-continue {
-  background: coral;
-  border: none;
-  color: white;
-  cursor: pointer;
-  font-weight: bold;
-  outline: none;
-  padding: 10px;
-}
-
-.btn-cancel {
-  background-color: #b71c1c;
-  float: left;
-}
-
-.btn-continue {
-  background-color: #1b5e20;
-  float: right;
 }
 
 .back-drop {
