--- a/src/css/ResultCard.css
+++ b/src/css/ResultCard.css
@@ -7,7 +7,7 @@
   padding: 1rem; */
   padding: 0px;
   display: grid;
-  grid-template-columns: repeat(3, minmax(20rem, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
   align-items: center;
   justify-items: center;
   grid-gap: 2rem;
