--- a/src/css/ResultCard.css
+++ b/src/css/ResultCard.css
@@ -35,9 +35,14 @@
 }
 
 .resultCardAura {
-  color: var(--off-white);
+  border-radius: 20px;
+  background-color: black;
+  color: white;
   font-size: 1.2rem;
-  padding: 1rem 1rem;
+  font-weight: 600;
+  padding: 0.5rem 0.5rem;
+  margin: 5px;
+  position: absolute;
 }
 
 .resultCardTitle {
