--- a/src/css/header.css
+++ b/src/css/header.css
@@ -69,6 +69,12 @@ nav ul li a {
   text-decoration: none;
 }
 
+@media all and (max-width: 345px){
+  nav ul li a {
+    font-size: 15px;
+  }
+}
+
 .liActive:hover {
   height: 100%;
 }
