--- a/src/css/aura_inputs.css
+++ b/src/css/aura_inputs.css
@@ -27,15 +27,30 @@ article::before {
     display: inline-block;
 } */
 
-.search-form {
+#search-form {
     position: absolute;
     top: 50%;
     left: 48%;
     transform: translate(-50%, -50%);
 }
+@media screen and (min-width: 970px) {
+    #search-form.fixed {
+        position: fixed;
+        top: 0;
+        left: 0;
+        transform: translateX(0);
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        background-color: #2F2F2F;
+        padding: 20px 0;;
+    }
+
+}
 
 form {
     /* font size 0 to remove inline-block whitespace*/
+
     font-size: 0;
     max-width: 100rem;
     margin: auto;
@@ -61,7 +76,7 @@ form {
 
 /* input and span styles*/
 
-.search-form span {
+#search-form span {
     padding: 0 1rem;
     /* display: flex; */
     vertical-align: middle;
@@ -181,12 +196,12 @@ option {
 
     }
 
-    .search-form span {
+    #search-form span {
         width: 25.5vw;
         min-width: 7rem;
     }
 
-    .search-form {
+    #search-form {
         position: center;
         top: 50%;
         left: 55%;
