--- a/src/css/aura_inputs.css
+++ b/src/css/aura_inputs.css
@@ -28,6 +28,7 @@ article::before {
     top: 50%;
     left: 48%;
     transform: translate(-50%, -50%);
+    z-index: 20;
 }
 @media screen and (min-width: 970px) {
     #search-form.fixed {
