Fix broken Auras and add stars to modal

--- a/src/css/Modal.css
+++ b/src/css/Modal.css
@@ -71,3 +71,11 @@
 .yelpLink {
   color: #000000;
 }
+
+.modalStar {
+  width: 10rem;
+  display: block;
+  text-align: center;
+  margin: auto;
+  margin-bottom: 1rem;
+}
