--- a/src/css/Modal.css
+++ b/src/css/Modal.css
@@ -6,9 +6,9 @@
   transition: all 0.8s;
 
   position: fixed;
-  z-index: 20;
+  z-index: 30;
   width: 100%;
-  height: 70%;
+  /* height: 70%; */
   overflow: auto;
 
   display: flex;
