--- a/src/css/palette.css
+++ b/src/css/palette.css
@@ -5,4 +5,17 @@
   --dark-mint: #41967c;
   --off-black: #272727;
   --shadow: rgba(0, 0, 0, 0.12);
+
+
+
+  --inspired: #01b9ff;
+  --romantic: #ff4949;
+  --trendy: #5abb9e;
+  --hipster: #c2b0ad;
+  --casual: purple;
+  --cheerful: #f1bc50;
+  --casual: #f38120;
+  --classy: black;
+  --touristy: pink;
+
 }
