--- a/src/css/ResultCard.css
+++ b/src/css/ResultCard.css
@@ -36,7 +36,7 @@
 
 .resultCardAura {
   border-radius: 20px;
-  background-color: black;
+  /* background-color: var(--business.categories.auraColor); */
   color: white;
   font-size: 1.2rem;
   font-weight: 600;
