--- a/src/css/palette.css
+++ b/src/css/palette.css
@@ -12,7 +12,7 @@
   --romantic: #ff4949;
   --trendy: #5abb9e;
   --hipster: #c2b0ad;
-  --casual: purple;
+  --intimate: purple;
   --cheerful: #f1bc50;
   --casual: #f38120;
   --classy: black;
