--- a/src/css/Modal.css
+++ b/src/css/Modal.css
@@ -8,12 +8,36 @@
   position: fixed;
   z-index: 20;
   width: 100%;
-  height: 70%;
+  height: 75%;
   overflow: auto;
 
-  display: flex;
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: repeat(3, 8rem);
+  grid-template-areas:
+    " head head "
+    " map map "
+    " foot foot ";
+
+  /* display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-between; */
+}
+
+.modal-wrapper > .modal-header {
+  grid-area: head;
+}
+
+.modal-wrapper > .modal-body {
+  grid-area: map;
+}
+
+/* .modal-wrapper > section.businessDetails {
+  grid-area: detail;
+} */
+
+.modal-wrapper > .modal-footer {
+  grid-area: foot;
 }
 
 .modal-header {
@@ -22,6 +46,8 @@
   line-height: 40px;
   padding: 5px 20px;
   text-align: center;
+  grid-column-start: span 1;
+  grid-area: span 1;
 }
 
 .modal-header h3 {
@@ -34,6 +60,7 @@
 .modal-body {
   padding: 10px 15px;
   text-align: center;
+  width: 100%;
 }
 
 .modal-footer {
@@ -73,6 +100,17 @@
 }
 
 .modalMap {
+  width: 3rem;
+  height: 3rem;
+}
+
+.leaflet-pane {
+  width: 50px;
+  height: 50px;
+  position: relative;
+}
+
+.businessMap {
   width: 50px;
   height: 50px;
 }
