--- a/src/css/Modal.css
+++ b/src/css/Modal.css
@@ -8,15 +8,15 @@
   position: fixed;
   z-index: 20;
   width: 100%;
-  height: 75%;
-  overflow: auto;
+  /* height: 75%;
+  overflow: auto; */
 
   display: grid;
-  grid-template-columns: 50% 50%;
-  grid-template-rows: repeat(3, 8rem);
+  grid-template-columns: 36% 64%;
+  grid-template-rows: 2rem, 6rem, 2rem;
   grid-template-areas:
     " head head "
-    " map map "
+    " map detail "
     " foot foot ";
 
   /* display: flex;
@@ -28,12 +28,16 @@
   grid-area: head;
 }
 
-.modal-wrapper > .modal-body {
+.modal-wrapper > .businessMap {
   grid-area: map;
 }
 
-/* .modal-wrapper > section.businessDetails {
+.modal-wrapper > .businessDetails {
   grid-area: detail;
+}
+
+/* .modal-wrapper > .modal-body {
+  grid-area: map;
 } */
 
 .modal-wrapper > .modal-footer {
@@ -111,8 +115,35 @@
 }
 
 .businessMap {
-  width: 50px;
-  height: 50px;
+  position: absolute;
+  top: 162px;
+  left: 192px;
+}
+
+/* .leaflet-tooltip-pane {
+  display: none;
+}
+
+.leaflet-popup-pane {
+  display: none;
+}
+
+.leaflet-proxy {
+  display: none;
+} */
+
+.leaflet-marker-icon {
+  width: 15px;
+  height: 15px;
+  transform: translate3d(25px, 25px, 0px);
+
+  z-index: 25;
+
+  top: -160px;
+
+  left: -11px;
+
+  position: absolute;
 }
 
 .modalStar {
@@ -122,3 +153,8 @@
   text-align: center;
   margin-left: 40%;
 }
+
+/* .leaflet-container {
+  width: 400px;
+  height: 800px;
+} */
