--- a/src/css/Modal.css
+++ b/src/css/Modal.css
@@ -8,11 +8,11 @@
   position: fixed;
   z-index: 20;
   width: 100%;
-  /* height: 75%;
-  overflow: auto; */
+  height: 70%;
+  /* overflow: auto; */
 
   display: grid;
-  grid-template-columns: 36% 64%;
+  /* grid-template-columns: 36% 64%; */
   grid-template-rows: 2rem, 6rem, 2rem;
   grid-template-areas:
     " head head "
@@ -109,15 +109,13 @@
 }
 
 .leaflet-pane {
-  width: 50px;
-  height: 50px;
+  width: 100%;
+  height: 100%;
   position: relative;
 }
 
 .businessMap {
-  position: absolute;
-  top: 162px;
-  left: 192px;
+  position: relative;
 }
 
 /* .leaflet-tooltip-pane {
@@ -154,7 +152,8 @@
   margin-left: 40%;
 }
 
-/* .leaflet-container {
-  width: 400px;
-  height: 800px;
-} */
+.leaflet-container {
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+}
