search bar background updated

--- a/src/css/SearchForm.css
+++ b/src/css/SearchForm.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Comfortaa");
+@import url('https://fonts.googleapis.com/css?family=Comfortaa');
 
 article {
   display: flex;
