--- a/src/css/header.css
+++ b/src/css/header.css
@@ -69,9 +69,24 @@ nav ul li a {
   text-decoration: none;
 }
 
-@media all and (max-width: 345px){
+@media all and (max-width: 490px){
   nav ul li a {
     font-size: 15px;
+  }
+  nav ul li {
+    padding: 0px 6px;
+  }
+}
+
+@media all and (max-width: 398px){
+  nav ul li a {
+    font-size: 13px;
+  }
+}
+
+@media all and (max-width: 356px){
+  nav ul li a {
+    font-size: 12px;
   }
 }
 
@@ -79,10 +94,11 @@ nav ul li a {
   height: 100%;
 }
 
-@media all and (max-width: 596px) {
+@media all and (max-width: 708px) {
   header {
     height: 6rem;
     text-align: center;
+    padding: 10px
   }
 
   header nav {
@@ -106,6 +122,7 @@ nav ul li a {
     margin: 0px;
     padding: 0px;
     margin-top: -3rem;
+    height: 47px;
   }
 
   nav ul li {
