--- a/src/css/Modal.css
+++ b/src/css/Modal.css
@@ -8,7 +8,7 @@
   position: fixed;
   z-index: 20;
   width: 100%;
-  height: 70%;
+  height: 64%;
   /* overflow: auto; */
 
   display: grid;
@@ -36,7 +36,6 @@
   .businessMap {
     height: 12rem;
   }
-
 }
 
 .modal-wrapper > .modal-header {
@@ -168,11 +167,19 @@
   width: 10rem;
   display: block;
   text-align: center;
-  margin-left: 40%;
+  margin-left: 40px;
 }
 
 .leaflet-container {
   overflow: hidden;
   width: 100%;
   height: 100%;
+}
+
+.categories {
+  list-style: none;
+}
+
+.info {
+  padding: 15px 40px;
 }
