--- a/src/css/Modal.css
+++ b/src/css/Modal.css
@@ -2,14 +2,13 @@
   background: white;
   border: 1px solid #d0cccc;
   box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.17);
-  margin: 0px auto 0;
+  margin: 0px auto 0px 3%;
   transition: all 0.8s;
 
   position: fixed;
   z-index: 30;
-  width: 100%;
-  height: 76%;
-  /* overflow: auto; */
+  width: 94%;
+  height: 82%;
 
   display: grid;
   grid-template-columns: 45% 55%;
@@ -18,10 +17,6 @@
     " head head "
     " map detail "
     " foot foot ";
-
-  /* display: flex;
-  flex-direction: column;
-  justify-content: space-between; */
 }
 
 @media screen and (max-width: 812px) {
@@ -49,10 +44,6 @@
 .modal-wrapper > .businessDetails {
   grid-area: detail;
 }
-
-/* .modal-wrapper > .modal-body {
-  grid-area: map;
-} */
 
 .modal-wrapper > .modal-footer {
   grid-area: foot;
@@ -101,18 +92,6 @@
 .businessMap {
   position: relative;
 }
-
-/* .close-modal-btn {
-  color: white;
-  cursor: pointer;
-  float: right;
-  font-size: 30px;
-  margin: 0;
-}
-
-.close-modal-btn:hover {
-  color: black;
-} */
 
 .back-drop {
   background-color: rgba(48, 49, 48, 0.42);
@@ -172,9 +151,3 @@
   color: #263238;
   display: inline-block;
 }
-
-/* .yelpCall {
-  margin-bottom: 0.5rem;
-  color: #263238;
-  display: inline-block;
-} */
