--- a/src/css/Modal.css
+++ b/src/css/Modal.css
@@ -151,3 +151,13 @@
   color: #263238;
   display: inline-block;
 }
+
+.modal-backdrop {
+  width: 100%;
+  height: 125%;
+  z-index: 15;
+  position: fixed;
+  background-color: black;
+  margin-top: -10rem;
+  margin-left: 0px;
+}
