--- a/src/css/Modal.css
+++ b/src/css/Modal.css
@@ -96,4 +96,40 @@
   margin-top: 2rem;
 }
 
+#trendybtn,
+#inspiredbtn,
+#romanticbtn,
+#cheerfulbtn,
+#intimatebtn,
+#classybtn,
+#hipsterbtn,
+#casualbtn,
+#touristybtn {
+  background: green;
+  border: 0.2rem solid white;
+  margin-right: 1rem;
+  position: center;
+  text-align: center;
+  border: none;
+  color: white;
+  padding: 10px 10px;
+  border-radius: 40%;
+  cursor: pointer;
 
+}
+
+
+h1 {
+  color: var(--off-white);
+  font-size: 1rem;
+  padding: 0rem 0.5rem 0rem 0.5rem;
+  float: left;
+  margin-left: 10px;
+  /* align-items: left; */
+  display: block;
+  /* position: absolute; */
+  border-color: white;
+  border-style: dotted;
+  background-color: rgba(90, 187, 158, 0.9);
+  border-radius: 33px;
+}
