--- a/src/css/ResultCard.css
+++ b/src/css/ResultCard.css
@@ -56,7 +56,7 @@
   margin-left: 10px;
   align-items: right;
   display: block;
-  position: absolute;
+  /* position: absolute; */
   border-color: white;
   border-style: dotted;
   background-color: rgba(90, 187, 158, 0.9);
