--- a/src/css/SearchResults.css
+++ b/src/css/SearchResults.css
@@ -9,3 +9,15 @@
   justify-content: center;
   padding: 10rem;
 }
+
+.errorTitle {
+  color: black;
+  padding: 8rem 5rem 12rem 5rem;
+  line-height: 2rem;
+}
+
+@media all and (max-width: 770px) {
+  .errorTitle {
+    font-size: 18px;
+  }
+}
