--- a/src/css/general.css
+++ b/src/css/general.css
@@ -1,11 +1,11 @@
-@import "./colorVariables.css";
+@import './colorVariables.css';
 
 /*Custom CSS*/
 :root {
   font-size: 16px;
   line-height: 1.5 em;
   /* font-family: 'Oswald', sans-serif; */
-  font-family: "Comfortaa", cursive;
+  font-family: 'Comfortaa', cursive;
 }
 
 body {
@@ -39,12 +39,12 @@ h2 {
   line-height: 1rem;
   display: block;
   text-align: center;
-  box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.2);
+  /* box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.2);
   background: radial-gradient(
     circle,
     rgba(39, 39, 39, 0.85),
     rgba(0, 0, 0, 0.27) 70%
-  );
+  ); */
 }
 
 section img ul h3 {
@@ -103,7 +103,7 @@ footer img {
 .bold {
   font-size: 1.1em;
   font-weight: 700;
-  font-family: "Raleway", sans-serif;
+  font-family: 'Raleway', sans-serif;
   text-shadow: 1px 1px rgb(198, 240, 226);
 }
 
