--- a/src/css/Modal.css
+++ b/src/css/Modal.css
@@ -165,9 +165,7 @@
   padding: 10px 10px;
   border-radius: 40%;
   cursor: pointer;
-
 }
-
 
 h1 {
   color: var(--off-white);
@@ -182,6 +180,7 @@ h1 {
   border-style: dotted;
   background-color: rgba(90, 187, 158, 0.9);
   border-radius: 33px;
+}
 
 .yelpLink {
   margin-bottom: 1rem;
@@ -197,5 +196,4 @@ h1 {
   background-color: black;
   margin-top: -10rem;
   margin-left: 0px;
-
 }
