--- a/src/css/ResultCard.css
+++ b/src/css/ResultCard.css
@@ -89,3 +89,15 @@
   margin-bottom: 1rem;
   margin-top: 1rem;
 }
+
+.resultCardLike {
+  width: 10%;
+  margin-right: 0.5rem;
+  margin-bottom: 0.3rem;
+}
+
+.resultCardLikeCont {
+  justify-content: flex-end;
+  display: flex;
+  width: 100%;
+}
