add some dashboard styles

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,6 +1,7 @@
 @import "./palette.css";
 @import "./article.css";
 @import "./colorVariables.css";
+@import "./dashboard.css";
 @import "./general.css";
 @import "./header.css";
 @import "./meetTeam.css";
