--- a/src/css/palette.css
+++ b/src/css/palette.css
@@ -5,7 +5,7 @@
   --dark-mint: #41967c;
   --off-black: #272727;
   --shadow: rgba(0, 0, 0, 0.12);
-
+  --test: rgba(0,0,0,.9);
 
 
   --inspired: #01b9ff;
