--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -72,6 +72,7 @@ text-decoration: underline;
   padding: 0 15px;
   min-width: 200px;
   background-color: var(--light-mint);
+  outline: none;
 }
 
 .account-forms form button {
