--- a/src/css/Modal.css
+++ b/src/css/Modal.css
@@ -134,6 +134,7 @@
   display: block;
   text-align: center;
   margin-left: 40px;
+  margin: auto;
 }
 
 .leaflet-container {
@@ -153,21 +154,30 @@
 
 .address {
   list-style: none;
+  display: flex;
   margin-bottom: 2rem;
+  flex-direction: column;
+  width: 100%;
+  padding: 0;
+  align-items: center;
+  font-weight: 500;
 }
 
 .info {
-  padding: 15px 40px;
-  margin-bottom: 2rem;
   color: rgba(90, 187, 158, 0.9);
+  display: flex;
+  align-self: center;
+  width: max-content;
 }
 
 .yelpPic {
   width: 2.5rem;
-  margin-bottom: -16px;
-  margin-right: 9px;
-  text-align: center;
-  margin-left: 40px;
+  align-self: center;
+}
+
+.yelpClick {
+  margin: auto;
+  font-size: 1rem;
 }
 
 #trendybtn,
@@ -209,9 +219,11 @@ h1 {
 }
 
 .yelpLink {
-  margin-top: 1rem;
+  margin-top: 1.4rem;
   color: #263238;
-  display: inline-block;
+  display: flex;
+  flex-direction: column;
+  height: 5rem;
 }
 
 .modal-backdrop {
