--- a/src/css/Modal.css
+++ b/src/css/Modal.css
@@ -251,3 +251,19 @@ h1 {
     width: 2.2rem;
   }
 }
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px white;
+  background-color: white;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+  background-color: white;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(90, 187, 158, 0.8);
+  background-image: rgba(90, 187, 158, 0.4);
+  border-radius: 0.6rem;
+}
