--- a/src/css/Modal.css
+++ b/src/css/Modal.css
@@ -18,7 +18,7 @@
     " map detail "
     " foot foot ";
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: hidden;
 }
 
 @media screen and (max-width: 853px) {
@@ -97,18 +97,6 @@
 .modal-footer {
   background: #263238;
   padding: 15px;
-}
-
-@media screen and (max-width: 793px) {
-  .modal-footer {
-    height: 88px;
-  }
-}
-
-@media screen and (max-width: 480px) {
-  .modal-footer {
-    height: 133px;
-  }
 }
 
 .modalMap {
@@ -194,7 +182,8 @@
 
 .yelpClick {
   margin: auto;
-  font-size: 1rem;
+  margin-top: -10px;
+  font-size: 0.5rem;
 }
 
 #trendybtn,
@@ -269,7 +258,6 @@ h1 {
   }
 }
 
-
 ::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px white;
   background-color: white;
@@ -285,4 +273,3 @@ h1 {
   background-image: rgba(90, 187, 158, 0.4);
   border-radius: 0.6rem;
 }
-
