--- a/src/css/Modal.css
+++ b/src/css/Modal.css
@@ -12,11 +12,11 @@
 
   display: grid;
   grid-template-columns: 45% 55%;
-  grid-template-rows: 60px 2fr 1fr;
+  grid-template-rows: 60px 1fr 60px;
   grid-template-areas:
-    " head head "
-    " map detail "
-    " foot foot ";
+    ' head head '
+    ' map detail '
+    ' foot foot ';
   overflow-x: hidden;
   overflow-y: hidden;
 }
@@ -35,10 +35,10 @@
   .modal-wrapper {
     grid-template-rows: 60px 1fr 1fr 54px;
     grid-template-areas:
-      " head head "
-      " map map "
-      " detail detail "
-      " foot foot ";
+      ' head head '
+      ' map map '
+      ' detail detail '
+      ' foot foot ';
     overflow-x: hidden;
     overflow-y: scroll;
   }
