Make modal pills responsive

--- a/src/css/ResultCard.css
+++ b/src/css/ResultCard.css
@@ -61,6 +61,12 @@
   border-radius: 33px;
 }
 
+@media all and (max-width: 373px) {
+  .resultCardAura {
+    font-size: 0.55rem;
+  }
+}
+
 .pillsContainer {
   display: flex;
   flex-direction: row;
