--- a/src/css/Modal.css
+++ b/src/css/Modal.css
@@ -81,6 +81,7 @@
   padding: 0;
   display: flex;
   align-items: center;
+  text-align: center;
 }
 
 .modalPillsContainer {
@@ -89,9 +90,52 @@
   justify-content: stretch;
   margin-top: -10px;
   margin-left: 15px;
+  height: 45px;
 }
 
+@media screen and (max-width: 570px) {
+  .modal-wrapper {
+    grid-template-rows: 108px 1fr 1fr 54px;
+  }
+  .modal-header {
+    height: 100px;
+    padding: 10px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 30px;
+    grid-template-rows: 1fr 1fr;
+    grid-template-areas:
+      ' title title button '
+      ' pills pills pills ';
+  }
+  .modal-header h3 {
+    height: 40px;
+  }
+  .modalPillsContainer {
+    margin-left: -10px;
+    margin-top: -6px;
+  }
+  
+  .modal-header > h3 {
+    grid-area: title;
+  }
+  .modal-header > .modalPillsContainer {
+    grid-area: pills;
+  }
+  .modal-header > .close-modal-btn {
+    grid-area: button;
+  }
+}
+
+@media all and (max-width: 373px) {
+  .modal-header h3 {
+    font-size: 17px;
+  }
+}
+
+
+
 .close-modal-btn {
+  height: 40px;
 }
 
 .modal-footer {
