Consistent colors for slideshow auras

--- a/src/css/palette.css
+++ b/src/css/palette.css
@@ -8,14 +8,21 @@
   --test: rgba(0,0,0,.9);
 
 
-  --inspired: #01b9ff;
   --romantic: #ff4949;
   --trendy: #5abb9e;
-  --hipster: #c2b0ad;
-  --intimate: purple;
-  --cheerful: #f1bc50;
   --casual: #f38120;
-  --classy: black;
+  --classy: black; 
   --touristy: pink;
-
+  --imaginative: #02dbff;
+  --lively: #f268ff;
+  --intimate: #f32284;
+  --exotic: #61c448;
+  --groovy:#e5e249;
+  --inspired:#89e87c;
+  --upscale:#ea9409;
+  --hipster:#c2b0ad;
+  --cheerful:#f1bc50;
+  --peaceful:#c4efff;
+  --powerful:#bc1414;
+  
 }
