--- a/src/css/meetTeam.css
+++ b/src/css/meetTeam.css
@@ -11,13 +11,21 @@
   justify-content: flex-start;
 }
 
+.halfpics .resultCardAura {
+  margin-left: 0;
+  width: 4rem;
+  text-align: center;
+}
+
+
+
 #title {
   font-weight: bold;
   padding-left: 0.6rem;
   /* width: 100%; */
   list-style: none;
   padding-bottom: 5px;
-  margin-top: 0;
+  margin-top: 10px;
   margin-left: 1rem;
 }
 
@@ -29,6 +37,7 @@
 .role {
   font-weight: normal;
   padding-bottom: 2vh;
+  margin-top: 10px;
 }
 
 .fav {
@@ -47,6 +56,10 @@ a {
   width: auto;
   height: auto;
   border-radius: 15px;
+}
+
+.resultCardAura {
+  margin-left: -10px;
 }
 
 #grid {
@@ -73,11 +86,13 @@ a {
     margin-bottom: 3rem;
     margin-top: 3rem;
   }
+
   #devon {
     grid-column-start: span 1;
     margin-left: 1rem;
     margin-right: 1rem;
   }
+
   #title {
     font-size: 0.8rem;
     margin-left: 0.5rem;
