--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -5,6 +5,31 @@
   min-height: calc(100vh - 175px);
 }
 
+@media screen and (max-width: 860px) {
+  .dashboard {
+    flex-direction: column;
+    align-items: stretch;
+    text-align: center;
+  }
+
+  .account-forms form {
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .account-forms form label input {
+    margin: 10px 0;
+  }
+
+  .account-forms form button {
+    margin: 20px auto;
+    width: 100%;
+    max-width: 2000px;
+  }
+}
+
 .dashboard-header {
   display: block;
   background-color: transparent;
@@ -57,13 +82,12 @@
   margin: 0;
   padding: 0;
   font-size: 18px;
-  font-family: "Comfortaa", cursive;
+  font-family: 'Comfortaa', cursive;
 }
 
 .link-button:hover,
 .link-button:focus {
-text-decoration: underline;
-
+  text-decoration: underline;
 }
 
 .account-settings {
@@ -86,9 +110,11 @@ text-decoration: underline;
 }
 
 .account-forms form input {
-  margin: 10px 0;
+  display: block;
+  margin: 10px;
   padding-left: 20px;
   min-width: 200px;
+  max-width: 400px;
   background-color: var(--light-mint);
   outline: none;
   font-size: 1rem;
@@ -99,7 +125,7 @@ text-decoration: underline;
   font-size: 18px;
   margin: 20px 0;
   max-width: 200px;
-  font-family: "Comfortaa", cursive;
+  font-family: 'Comfortaa', cursive;
   background-color: var(--dark-mint);
   outline: none;
 }
@@ -108,4 +134,3 @@ text-decoration: underline;
   outline: 1px solid var(--off-black);
   outline-offset: -4px;
 }
-
