--- a/src/styles/article.scss
+++ b/src/styles/article.scss
@@ -1,5 +1,3 @@
-@import "./colorVariables.css";
-
 section.landing p {
   font-size: 1.5rem;
   margin-top: -1rem;
@@ -119,7 +117,6 @@ section.landing h3 {
   }
 }
 
-
 .content {
   display: flex;
   margin-bottom: 1.5rem;
@@ -134,7 +131,7 @@ section.landing h3 {
   border-radius: 10rem;
   width: 5rem;
   height: 5rem;
-  background: rgba(90, 187, 158);
+  background: rgb(90, 187, 158);
   position: relative;
   top: -6rem;
   padding: 5px;
