--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,5 +1,3 @@
-@import "./colorVariables.css";
-
 /*Header*/
 header {
   height: 4rem;
@@ -27,7 +25,7 @@ nav ul li:hover {
   background-color: var(--base-color-dark);
 }
 
-header>* {
+header > * {
   display: inline-block;
 }
 
@@ -69,7 +67,7 @@ nav ul li a {
   text-decoration: none;
 }
 
-@media all and (max-width: 490px){
+@media all and (max-width: 490px) {
   nav ul li a {
     font-size: 15px;
   }
@@ -78,13 +76,13 @@ nav ul li a {
   }
 }
 
-@media all and (max-width: 398px){
+@media all and (max-width: 398px) {
   nav ul li a {
     font-size: 13px;
   }
 }
 
-@media all and (max-width: 356px){
+@media all and (max-width: 356px) {
   nav ul li a {
     font-size: 12px;
   }
@@ -98,7 +96,7 @@ nav ul li a {
   header {
     height: 6rem;
     text-align: center;
-    padding: 10px
+    padding: 10px;
   }
 
   header nav {
