--- a/src/styles/MeetTheTeam.scss
+++ b/src/styles/MeetTheTeam.scss
@@ -1,5 +1,5 @@
 .halfpics {
-  background-color: var(--base-color);
+  background-color: var(--mint);
   margin-left: 1rem;
   margin-right: 1rem;
   margin-top: 1rem;
