--- a/src/styles/article.scss
+++ b/src/styles/article.scss
@@ -24,7 +24,7 @@ article h3 {
   width: 50%;
   margin-left: 2rem;
   margin-right: 2rem;
-  background-color: var(--base-color-text);
+  background-color: var(--mint-text);
   border-radius: 15px;
   box-shadow: 5px 5px rgba(0, 0, 0, 0.12);
 }
@@ -67,7 +67,7 @@ section.landing h3 {
 }
 
 .mint.landing {
-  background-color: var(--base-color-text);
+  background-color: var(--mint-text);
   /* margin-left: 4rem;
   margin-right: 4rem; */
   border-radius: 1.5rem;
