--- a/src/styles/palette.scss
+++ b/src/styles/palette.scss
@@ -1,19 +1,16 @@
 :root {
-  --mint: #5abb9e;
+  // Site Palette
+  --mint: rgba(90, 187, 158, 0.85);
+  --mint-text: rgba(90, 187, 158, 0.95);
   --light-mint: #c8f3e9;
   --off-white: #f0f8f6;
-  --dark-mint: #41967c;
+  --dark-mint: rgba(65, 150, 124, 1);
   --off-black: #272727;
   --shadow: rgba(0, 0, 0, 0.12);
-  --test: rgba(0, 0, 0, 0.9);
 
-  --base-color: rgba(90, 187, 158, 0.85);
-  --base-color-text: rgba(90, 187, 158, 0.95);
-  --base-color-dark: rgba(65, 150, 124, 1);
-  --black: #272727;
-
+  // Auras Palette
   --romantic: #ff4949;
-  --trendy: #5abb9e;
+  --trendy: #228b22;
   --casual: #f38120;
   --classy: black;
   --touristy: pink;
