add credit for type checking

--- a/src/styles/helpers/typeChecking.scss
+++ b/src/styles/helpers/typeChecking.scss
@@ -1,6 +1,7 @@
 ////
 // A collection of function for advanced type checking
 // @author Hugo Giraudel
+// @credit https://css-tricks.com/snippets/sass/advanced-type-checking/
 ////
 
 @function is-number($value) {
